feat:integrate logout function

--- a/src/components/Login.astro
+++ b/src/components/Login.astro
@@ -139,8 +139,8 @@
             
             showNotificationLogin({
               title: 'Login Successful!',
-              message: 'You are now logged in. Redirecting to dashboard...',
-              buttonText: 'Go to Dashboard',
+              message: 'You are now logged in. Redirecting to main page',
+              buttonText: 'Go to Main Page',
               redirectUrl: '/home',
               autoRedirectDelay: 3000
             });
